tests/toylang/neg/001463_mutation.toylang
program a = { var a : sleep bool; } .
